[package]
name = "colony-cli"
version = "0.1.0"
edition = "2024"
authors = ["Chuck McClish"]
description = "A colonylib CLI for interacting with the colony-daemon"
homepage = "https://github.com/zettawatt/colony-utils"
license = "GPL-3.0-only"

[dependencies]
clap = "4.5.39"
indicatif = "0.17.11"
serde = "1.0.219"
serde_json = "1.0.140"
