[package]
name = "colony-daemon"
version = "0.1.0"
edition = "2024"
authors = ["Chuck McClish"]
description = "A server hosting a REST endpoint for interacting with colonylib"
homepage = "https://github.com/zettawatt/colony-utils"
license = "GPL-3.0-only"

[dependencies]
axum = "0.8.4"
clap = "4.5.39"
colonylib = "0.2.2"
indicatif = "0.17.11"
jsonwebtoken = "9.3.1"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.45.1"
